<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/toolbarLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingBottom="10dp">

        <TextView
            android:id="@+id/toolbarTextTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/hi_deepak"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/toolbarTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarTextTitle"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="24dp"
            android:text="@string/you_are_in"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/toolbarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbarTextTitle"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@id/toolbarTextView"
            android:text="@string/jjn_services"
            android:textColor="@color/lightRed"
            android:textSize="15sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/toolbarAboutInfo"
            android:onClick="ShowPopUp"
            android:layout_width="27dp"
            android:layout_height="27dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_menu" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>