<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/carpenter"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_corners"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_carpenter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/carpenter"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/carpenter" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/technician"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_corners"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_032_technician" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/technician"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/technician" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/worker"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_corners"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_005_worker" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/worker"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/worker" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/mechanic"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_corners"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_mechanic" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/mechanic"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/mechanic" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear"
        android:layout_marginTop="20dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="8dp">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/plumber"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_corners"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_017_plumber" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/plumber"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/plumber" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/painter"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_corners"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_014_painter" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/painter"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/painter" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/teacher"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_corners"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_031_teacher" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teacher"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/teacher" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/programmer"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_corners"
                android:contentDescription="@string/app_name"
                android:padding="10dp"
                android:src="@drawable/ic_019_programmer" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/programmer"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:text="@string/programmer" />
        </RelativeLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/linearTwo"
        android:layout_marginTop="14dp"
        android:background="?android:attr/listDivider" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/divider">

        <ImageView
            android:id="@+id/taxiBooking"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_undraw_order_ride_xjs4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="130dp"
            android:layout_marginBottom="85dp"
            android:fontFamily="@font/caveat_bold"
            android:gravity="center"
            android:includeFontPadding="true"
            android:text="@string/taxi_booking"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/taxiBooking"
            app:layout_constraintStart_toStartOf="@+id/taxiBooking" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>